# necocode

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  release-plz.toml  rustfmt.toml
.github/: renovate.json
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: lib.rs  logging.rs  main.rs  separator.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: api.rs  app.rs  command.rs  config.rs  events.rs  input.rs  lib.rs  main.rs  session.rs  tools.rs  ui.rs
core/src/api/: anthropic.rs  provider.rs
core/src/api/anthropic/: models.rs  schema.rs
core/src/input/: mod.rs  stdin.rs
core/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  read.rs  write.rs
src/: api.rs  main.rs  schema.rs  tools.rs  ui.rs
src/api/: anthropic.rs
src/api/anthropic/: schema.rs
src/tools/: edit.rs  glob.rs  read.rs
tui/: Cargo.toml
tui/src/: colors.rs  lib.rs  logging.rs  main.rs  output.rs  separator.rs
