[package]
name = "nya-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
glob = "0.3"
walkdir = "2"
termcolor = "1"
crossterm = "0.28"
futures = "0.3"
async-stream = "0.3"

[lints.clippy]
pedantic = "warn"

