[workspace]
members = ["core", "tui"]
default-members = ["tui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
regex = "1"
glob = "0.3"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
async-stream = "0.3"
crossterm = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
toml = "0.8"
dirs = "5.0"

[profile.release]
lto = "thin"

[workspace.lints.rust]
missing_docs = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_doc_tests = "deny"
invalid_html_tags = "deny"
bare_urls = "deny"

[workspace.lints.clippy]
pedantic = "deny"

missing_docs_in_private_items = "deny"

module_name_repetitions = "deny"
missing_errors_doc = "deny"
must_use_candidate = "deny"
mod_module_files = "deny"

indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

print_stderr = "deny"
print_stdout = "deny"
