[workspace]
members = ["core", "tui"]
default-members = ["core", "tui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
regex = "1"
glob = "0.3"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
async-stream = "0.3"
crossterm = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
toml = "1.0"
dirs = "6.0"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
lto = "thin"

[workspace.lints.rust]
missing_docs = "forbid"
unused_crate_dependencies = "forbid"
unused_extern_crates = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
private_doc_tests = "forbid"
invalid_html_tags = "forbid"
bare_urls = "forbid"

[workspace.lints.clippy]
pedantic = "forbid"

missing_docs_in_private_items = "forbid"

module_name_repetitions = "forbid"
missing_errors_doc = "forbid"
must_use_candidate = "forbid"
mod_module_files = "forbid"

indexing_slicing = "forbid"
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
todo = "forbid"
unimplemented = "forbid"
unreachable = "forbid"
panic_in_result_fn = "forbid"

print_stderr = "forbid"
print_stdout = "forbid"
