[package]
name = "necocode"
version.workspace = true
edition.workspace = true

[dependencies]
necocode-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
regex.workspace = true
glob.workspace = true
walkdir.workspace = true
clap.workspace = true
futures.workspace = true
async-stream.workspace = true
thiserror.workspace = true
crossterm.workspace = true

[[bin]]
name = "necocode"
path = "src/main.rs"
