[package]
name = "nyan-code"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
regex.workspace = true
glob.workspace = true
walkdir.workspace = true
clap.workspace = true
futures.workspace = true
async-stream.workspace = true
nyan-code-tui = { path = "../tui" }
