[package]
name = "neco-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
regex.workspace = true
glob.workspace = true
walkdir.workspace = true
clap.workspace = true
futures.workspace = true
async-stream.workspace = true
