[package]
name = "neco-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
regex.workspace = true
glob.workspace = true
walkdir.workspace = true
futures.workspace = true
async-stream.workspace = true
toml.workspace = true
dirs.workspace = true
indexmap.workspace = true
tracing.workspace = true

[dev-dependencies]
serial_test = "3"
