[package]
name = "neco"
version.workspace = true
edition.workspace = true

[dependencies]
neco-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
regex.workspace = true
glob.workspace = true
walkdir.workspace = true
clap.workspace = true
futures.workspace = true
async-stream.workspace = true
thiserror.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[[bin]]
name = "neco"
path = "src/main.rs"
