[package]
name = "neco"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
neco-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[[bin]]
name = "neco"
path = "src/main.rs"
